test/libhyperion/syntaxTests/memberLookup/msg_value_modifier_view.hyp
contract C {
    modifier costs(uint _amount) { require(msg.value >= _amount); _; }
    function f() costs(1 quanta) public view {}
}
// ----
// TypeError 4006: (101-116): This modifier uses "msg.value" or "callvalue()" and thus the function has to be payable or internal.
